fix spacing around navbar to work regardless of browser width

--- a/octoprint/static/css/octoprint.less
+++ b/octoprint/static/css/octoprint.less
@@ -1,7 +1,10 @@
 /** Top bar */
 
-.navbar {
-	margin-bottom: 2em;
+@media screen and (min-width: 980px)
+{
+	body {
+	  padding-top: 60px;
+	}
 }
 
 .navbar-inner-text (@base) {
